--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -23,15 +23,15 @@
     <button mat-menu-item class="user-name">
       {{ userManagementServ.getRoleName() }} 
     </button>
-    <button mat-menu-item  routerLink="password">
+    <button mat-menu-item  routerLink="password" *ngIf="role != 'Consultant'">
       My Profile
       <mat-icon class="icon">person</mat-icon>
     </button>
-    <button mat-menu-item>
+    <button mat-menu-item *ngIf="role != 'Consultant'">
       <mat-icon class="icon">settings</mat-icon>
       Account Settings
     </button>
-    <button mat-menu-item>
+    <button mat-menu-item *ngIf="role != 'Consultant'">
       <mat-icon class="icon">help</mat-icon>
       Need Help?
     </button>
