hot-list excel and forgot-password time removed

--- a/src/app/usit/components/hot-list-providers-list/add-hot-list-provider/add-hot-list-provider.component.html
+++ b/src/app/usit/components/hot-list-providers-list/add-hot-list-provider/add-hot-list-provider.component.html
@@ -30,6 +30,13 @@
                         is Required
                     </mat-error>
                 </mat-form-field>
+
+                <mat-form-field appearance="fill">
+                    <mat-label>Website</mat-label>
+                    <input matInput formControlName="website" maxlength="50" (input)="camelCase($event)" />
+                    <mat-error *ngIf="hotlistForm.get('website')!.hasError('required')"> Company website is required
+                    </mat-error>
+                </mat-form-field>
             </div>
 
             <!-- form - right controls -->
