--- a/src/app/usit/components/hot-list-providers-list/hot-list-providers-list.component.html
+++ b/src/app/usit/components/hot-list-providers-list/hot-list-providers-list.component.html
@@ -16,9 +16,9 @@
           (click)="getAllVendorByType('Both')">Both Recruiting & Staffing</button>
       </span> -->
       <div class="vendor-actions">
-        <!-- <button mat-icon-button (click)="uploadVmsExcelData()" matTooltip="Upload VMS Excel Data" matTooltipPosition="above">
+        <button mat-icon-button (click)="uploadHlProvidersExcelData()" matTooltip="Upload Hot-list Providers Excel" matTooltipPosition="above">
           <mat-icon class="item-icon">upload</mat-icon>
-        </button> -->
+        </button>
         <button mat-icon-button class="add-user"
           (click)="addHotlistProvider()" matTooltip="Add Hotlist Provider" matTooltipPosition="above">
           <mat-icon class="item-icon">add_circle</mat-icon>
@@ -47,7 +47,11 @@
           <ng-container matColumnDef="Company">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%"> Company</th>
             <td mat-cell *matCellDef="let element" style="width: 16%">
-              <span class="company-recruiter-info"> {{element.vendor| titlecase}}</span>
+              <span class="vendor-name">
+                <a href="{{element?.job_source}}" target="_blank">
+                {{element.vendor| titlecase}}
+              </a>
+            </span>
             </td>
           </ng-container>
   
@@ -117,7 +121,7 @@
   
           <!-- table ROW -->
           <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-          <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngClass]="getVendorRowClass(row)"></tr>
+          <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="{'background-color': row.isexist ? 'rgba(185	,245	,210)' : ''}"></tr>
         </table>
         <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
       </section>
