--- a/src/app/usit/components/hot-list-providers-list/hot-list-providers-list.component.scss
+++ b/src/app/usit/components/hot-list-providers-list/hot-list-providers-list.component.scss
@@ -363,3 +363,8 @@
     width: 24px !important;
     height: 24px !important;
   }
+
+  .vendor-name a {
+    text-decoration: none;
+    color: #0d6efd;
+  }
