--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
       </mat-card-header> -->
 
       <mat-tab-group class="custom-tabs">
-        <mat-tab label="Employee Login">
+        <mat-tab label="Employer Login">
             <mat-card-content class="no-padding">
                 <form class="login-form" [formGroup]="form" (ngSubmit)="userLogin('Employee')">
                     <mat-form-field class="full-width"  >
@@ -41,7 +41,7 @@
                 </form>
             </mat-card-content>
         </mat-tab>
-        <mat-tab label="Consultant Login">
+        <mat-tab label="Employee Login">
             <mat-card-content class="no-padding">
                 <form class="login-form" [formGroup]="form" (ngSubmit)="userLogin('Consultant')">
                     <mat-form-field class="full-width"  >
