--- a/src/app/components/register-consultant/register-consultant.component.html
+++ b/src/app/components/register-consultant/register-consultant.component.html
@@ -8,102 +8,185 @@
     </mat-card-header>
 
     <mat-card-content class="no-padding">
-      <form class="login-form" [formGroup]="form" (ngSubmit)="userLogin()">
-        <div class="email-div">
-          <div>
-            <mat-form-field appearance="outline" class="full-width">
-              <mat-label>Enter Email</mat-label>
-              <input matInput formControlName="email" />
-              <mat-error *ngIf="form.get('email')!.hasError('required')">Email is required</mat-error>
-              <mat-error *ngIf="form.get('email')!.hasError('email')">Invalid email address</mat-error>
-            </mat-form-field>
+      <form class="login-form" [formGroup]="form">
+        <div *ngIf="step1">
+          <div class="email-div">
+            <div>
+              <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Enter Email</mat-label>
+                <input matInput formControlName="email" maxlength="40" />
+                <mat-error *ngIf="form.get('email')!.hasError('required')">Email is required</mat-error>
+                <mat-error *ngIf="form.get('email')!.hasError('email')">Invalid email address</mat-error>
+              </mat-form-field>
+            </div>
+            <div class="forgot-buttons" *ngIf="requestOtp">
+              <button mat-raised-button color="primary" class="full-width" type="button" (click)="sendOTP()"
+                [disabled]="form.controls['email'].invalid">
+                Request OTP
+              </button>
+            </div>
           </div>
-          <div class="forgot-buttons" *ngIf="requestOtp">
-            <button mat-raised-button color="primary" class="full-width" type="button" (click)="sendOTP()"
-              [disabled]="form.controls['email'].invalid">
-              Request OTP
+
+          <div class="email-div" *ngIf="isOTPSent">
+            <div>
+              <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Enter Your OTP</mat-label>
+                <input matInput formControlName="otp" maxlength="6" />
+                <mat-error *ngIf="form.get('otp')!.hasError('required')">OTP is required</mat-error>
+              </mat-form-field>
+            </div>
+            <div class="forgot-buttons" *ngIf="validateOtp">
+              <button mat-raised-button color="primary" type="button" class="full-width" (click)="validateOTP()"
+                [disabled]="form.controls['otp'].invalid">
+                Validate
+              </button>
+            </div>
+          </div>
+
+          <mat-form-field appearance="outline" class="full-width" *ngIf="details">
+            <mat-label>First Name</mat-label>
+            <input matInput formControlName="firstname" maxlength="25" />
+            <mat-error *ngIf="form.get('firstname')!.hasError('required')">First Name is required</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="full-width" *ngIf="details">
+            <mat-label>Last Name</mat-label>
+            <input matInput formControlName="lastname" maxlength="25" />
+            <mat-error *ngIf="form.get('lastname')!.hasError('required')">Last Name is required</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" *ngIf="details" style="width: 100%;">
+            <mat-label>Personal Contact Number </mat-label>
+            <ngx-mat-intl-tel-input class="intl-input" [preferredCountries]="['in','us']"
+              formControlName="personalcontactnumber" [enablePlaceholder]="true" [enableSearch]="true"
+              name="personalcontactnumber" id="intlInput" #personalcontactnumber #pNumb
+              (keypress)="onlyNumberKey($event)">
+            </ngx-mat-intl-tel-input>
+            <mat-error *ngIf="form.get('personalcontactnumber').hasError('required')">Personal Contact Number is
+              required</mat-error>
+          </mat-form-field>
+
+          <!-- <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Immigration Status</mat-label>
+            <input matInput formControlName="immigrationstatus" />
+            <mat-error *ngIf="form.get('immigrationstatus')!.hasError('required')">Immigration Status is
+              required</mat-error>
+          </mat-form-field> -->
+
+          <mat-form-field appearance="outline" class="full-width" *ngIf="details">
+            <mat-label> Create Password</mat-label>
+            <input matInput formControlName="password" maxlength="15" type="{{ hidePassword ? 'password' : 'text' }}" />
+            <mat-icon [style.color]="'#3f51b5'" matPrefix>lock</mat-icon>
+            <button mat-icon-button type="button" matSuffix (click)="hidePassword = !hidePassword;">
+              <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
             </button>
-          </div>
-        </div>
+            <mat-error *ngIf="form.get('password')!.hasError('required')">Create Password is required</mat-error>
+            <mat-error *ngIf="form.get('password')!.hasError('pattern')">
+              password: [ 8-15 chars, at least 1 upper, 1 lower, 1 special & 1 num]
+            </mat-error>
+          </mat-form-field>
 
-        <div class="email-div" *ngIf="isOTPSent">
-          <div>
-            <mat-form-field appearance="outline" class="full-width">
-              <mat-label>Enter Your OTP</mat-label>
-              <input matInput formControlName="otp" maxlength="15" />
-              <mat-error *ngIf="form.get('otp')!.hasError('required')">OTP is required</mat-error>
-            </mat-form-field>
-          </div>
-          <div class="forgot-buttons" *ngIf="validateOtp">
-            <button mat-raised-button color="primary" type="button" class="full-width" (click)="validateOTP()"
-              [disabled]="form.controls['otp'].invalid">
-              Validate
+          <mat-form-field appearance="outline" class="full-width" *ngIf="details">
+            <mat-label>Confirm Password</mat-label>
+            <input matInput formControlName="confirmpassword" maxlength="15"
+              type="{{ hidePassword ? 'password' : 'text' }}" />
+            <mat-icon [style.color]="'#3f51b5'" matPrefix>lock</mat-icon>
+            <button mat-icon-button type="button" matSuffix (click)="hidePassword = !hidePassword;">
+              <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
             </button>
+            <mat-error *ngIf="form.get('confirmpassword')!.hasError('required')">Confirm Password is
+              required</mat-error>
+            <mat-error *ngIf="form.get('confirmpassword')!.hasError('pattern')">
+              password: [ 8-15 chars, at least 1 upper, 1 lower, 1 special & 1 num]
+            </mat-error>
+            <mat-error
+              *ngIf="form.hasError('confirmPasswordMismatch') && !form.get('confirmpassword')!.hasError('required')">
+              Passwords do not match
+            </mat-error>
+          </mat-form-field>
+
+          <div class="forgot-buttons" *ngIf="details">
+            <button mat-raised-button color="primary" class="full-width" type="submit" (click)="proceedToStep2()"
+              [disabled]="
+                  form.controls['password'].invalid ||
+                  form.controls['confirmpassword'].invalid ||
+                  form.controls['password'].value !==
+                  form.controls['confirmpassword'].value"> Proceed Register</button>
           </div>
         </div>
 
-        <mat-form-field appearance="outline" class="full-width" *ngIf="details">
-          <mat-label>First Name</mat-label>
-          <input matInput formControlName="firstname" maxlength="15" />
-          <mat-error *ngIf="form.get('firstname')!.hasError('required')">First Name is required</mat-error>
-        </mat-form-field>
+        <div *ngIf="step2">
 
-        <mat-form-field appearance="outline" class="full-width" *ngIf="details">
-          <mat-label>Last Name</mat-label>
-          <input matInput formControlName="lastname" maxlength="8" />
-          <mat-error *ngIf="form.get('lastname')!.hasError('required')">Last Name is required</mat-error>
-        </mat-form-field>
+          <!-- Resume Upload -->
+          <mat-form-field appearance="outline" class="upload">
+            <mat-label for="resume">Resume</mat-label>
+            <div class="upload-inp-container">
+              <input matInput readonly name="resumeName" class="file-input"
+                [value]="resumeupload ? resumeupload.name : 'No file chosen'" />
+              <label for="resume" class="browse-button-label">
+                <button type="button" mat-icon-button (click)="resume.click()"><mat-icon>upload_file</mat-icon></button>
+              </label>
+              <input type="file" #resume id="resume" (change)="uploadResume($event)" name="resumeUploadFile"
+                accept="application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document"
+                style="display: none;" />
+            </div>
+            <mat-hint *ngIf="resumeError" style="color: #f44336; font-size: 12px;">Resume size should be less than 2
+              mb</mat-hint>
+            <mat-hint *ngIf="resumeFileNameLength" style="color: #f44336; font-size: 12px;">File name too long, rename
+              to
+              15-20 characters before upload</mat-hint>
+          </mat-form-field>
 
-        <mat-form-field appearance="outline" *ngIf="details">
-          <mat-label>Personal Contact Number </mat-label>
-          <ngx-mat-intl-tel-input class="intl-input" [preferredCountries]="['in','us']"
-            formControlName="personalcontactnumber" [enablePlaceholder]="true" [enableSearch]="true"
-            name="personalcontactnumber" id="intlInput" #personalcontactnumber #pNumb
-            (keypress)="onlyNumberKey($event)">
-          </ngx-mat-intl-tel-input>
-          <mat-error *ngIf="form.get('personalcontactnumber').hasError('required')">Personal Contact Number is
-            required</mat-error>
-        </mat-form-field>
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label> Current Location</mat-label>
+            <input matInput formControlName="currentlocation" />
+            <mat-error *ngIf="form.get('currentlocation')!.hasError('required')">Current Location is
+              required</mat-error>
+          </mat-form-field>
 
-        <mat-form-field appearance="outline" class="full-width" *ngIf="details">
-          <mat-label> Create Password</mat-label>
-          <input matInput formControlName="password" maxlength="15" type="{{ hidePassword ? 'password' : 'text' }}"/>
-          <mat-icon [style.color]="'#3f51b5'" matPrefix>lock</mat-icon>
-          <button mat-icon-button type="button" matSuffix (click)="hidePassword = !hidePassword;">
-            <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
-          </button> 
-          <mat-error *ngIf="form.get('password')!.hasError('required')">Create Password is required</mat-error>
-          <mat-error *ngIf="form.get('password')!.hasError('pattern')">
-            password: [ 8-15 chars, at least 1 upper, 1 lower, 1 special & 1 num]
-          </mat-error>
-        </mat-form-field>
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Job Title</mat-label>
+            <input matInput formControlName="position" />
+            <mat-error *ngIf="form.get('position')!.hasError('required')">Job Title is required</mat-error>
+          </mat-form-field>
 
-        <mat-form-field appearance="outline" class="full-width" *ngIf="details">
-          <mat-label>Confirm Password</mat-label>
-          <input matInput formControlName="confirmpassword" maxlength="15" type="{{ hidePassword ? 'password' : 'text' }}"/>
-          <mat-icon [style.color]="'#3f51b5'" matPrefix>lock</mat-icon>
-          <button mat-icon-button type="button" matSuffix (click)="hidePassword = !hidePassword;">
-            <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
-          </button>
-          <mat-error *ngIf="form.get('confirmpassword')!.hasError('required')">Confirm Password is required</mat-error>
-          <mat-error *ngIf="form.get('confirmpassword')!.hasError('pattern')">
-            password: [ 8-15 chars, at least 1 upper, 1 lower, 1 special & 1 num]
-          </mat-error>
-          <mat-error *ngIf="form.hasError('confirmPasswordMismatch') && !form.get('confirmpassword')!.hasError('required')">
-            Passwords do not match
-          </mat-error>
-        </mat-form-field>
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Experience (in years)</mat-label>
+            <input matInput formControlName="experience" maxlength="2"/>
+            <mat-error *ngIf="form.get('experience')!.hasError('required')">Experience is required</mat-error>
+          </mat-form-field>
 
-        <div class="forgot-buttons" *ngIf="details">
-          <button mat-raised-button color="primary" class="full-width" type="submit"
-          [disabled]="
-                form.controls['password'].invalid ||
-                form.controls['confirmpassword'].invalid ||
-                form.controls['password'].value !==
-                form.controls['confirmpassword'].value"
-            >Register</button>
+          <!-- <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Technology</mat-label>
+            <input matInput formControlName="experience" />
+            <mat-error *ngIf="form.get('experience')!.hasError('required')">Technology is required</mat-error>
+          </mat-form-field> -->
+
+
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Select Technology</mat-label>
+            <input matInput formControlName="technology" [matAutocomplete]="techAutoCmp">
+            <mat-autocomplete #techAutoCmp="matAutocomplete">
+              <mat-option *ngFor="let option of (searchTechOptions$ | async)" (click)="techskills(option)"
+                [value]="option.technologyarea">
+                {{ option.technologyarea }}
+              </mat-option>
+            </mat-autocomplete>
+            <!-- <button matSuffix mat-icon-button
+                (click)="onAddTechnology();$event.preventDefault();$event.stopImmediatePropagation()"><mat-icon>add</mat-icon></button> -->
+            <mat-error *ngIf="form.get('technology').hasError('required')">Technology is Required</mat-error>
+          </mat-form-field>
+
+
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Skills</mat-label>
+            <input matInput formControlName="skills" />
+            <mat-error *ngIf="form.get('skills')!.hasError('required')">Skills is required</mat-error>
+          </mat-form-field>
+
+          <button mat-raised-button color="primary" class="full-width" type="button" (click)="userLogin()">Submit</button>
+
         </div>
-
 
       </form>
     </mat-card-content>
