--- a/src/app/components/register-consultant/register-consultant.component.scss
+++ b/src/app/components/register-consultant/register-consultant.component.scss
@@ -164,3 +164,62 @@ mat-mdc-menu-content {
   padding: 0px 4px !important;
 }
 /**** TEL INPUT   - ENDS ****/
+
+/**** UPLOAD DOCUMENTS - STARTS ****/
+
+// HEADER
+.header-upload-documents {
+  display: flex;
+  height: 48px;
+  background-color: whitesmoke;
+  align-items: center;
+  margin: 0px 2px 10px 6px;
+}
+
+.header-upload-text {
+  margin-left: 4px;
+  font-weight: 400;
+  font-size: larger;
+}
+
+
+.upload-doc-cotainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.upload-inp-container {
+  display: flex;
+}
+
+.upload-doc-left {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.upload-doc-right {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.upload-doc-cotainer .upload-doc-left .mat-mdc-form-field {
+  width: 95%;
+}
+
+.upload-doc-cotainer .upload-doc-right .mat-mdc-form-field {
+  width: 99%;
+}
+
+.upload {
+  width: 100%;
+}
+/**** UPLOAD DOCUMENTS - ENDS ****/
+
+.select-technology-field {
+  width: 100%;
+  text-align: center;
+}
