--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -165,7 +165,7 @@
         <!-- RAte Column -->
         <ng-container matColumnDef="Rate">
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Rate" mat-sort-header> Rate </th>
-          <td mat-cell *matCellDef="let element" class="text-align"> {{ NumericValue(element.hourlyrate) }}</td>
+          <td mat-cell *matCellDef="let element" class="text-align"> {{ element.hourlyrate }}</td>
         </ng-container>
 
         <!-- Added By -->
