profile image path change and side navbar changes

--- a/src/app/usit/components/profile/profile.component.html
+++ b/src/app/usit/components/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="profile">
     <div class="item1">
         <div>
-            <img src="../../../../assets/images/file.png" alt="profile avatar" width="150px" height="150px">
+            <img src="assets/images/file.png" alt="profile avatar" width="150px" height="150px">
         </div>
         <div class="profile-name">
             {{ profiledata?.consultantname }}
