add consultant and open requirements changes

--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -22,6 +22,7 @@
                     <!-- <mat-option value="post job free">Post Job Free</mat-option> -->
                     <mat-option value="recruit.net">Recruit</mat-option>
                     <mat-option value="Simplyhired">Simply Hired</mat-option>
+                    <mat-option value="techfetch">Tech Fetch</mat-option>   
                     <!-- <mat-option value="snaprecruit">Snaprecruit</mat-option> -->
                 </mat-select>
             </mat-form-field>
