forgot-password, register consultant, recru-info changes

--- a/src/app/usit/components/openreqs/recru-info/recru-info.component.html
+++ b/src/app/usit/components/openreqs/recru-info/recru-info.component.html
@@ -4,6 +4,14 @@
     <li class="header-text slash">-</li>
     <li class="header-text" mat-dialog-title id="mainHeaderTitle">{{ data.title }}</li>
   </ul>
+  <div class="button-container">
+    <ng-container *ngIf="data.isExist === '1'; else addVendor">
+      <button mat-button mat-raised-button color="primary" (click)="addRecruiter()">Add Recruiter</button>
+    </ng-container>
+    <ng-template #addVendor>
+      <button mat-button mat-raised-button color="primary" (click)="addvendor()">Add Vendor</button>
+    </ng-template>
+  </div>
   <button mat-icon-button (click)="onClick()">
     <mat-icon aria-label="Close">close</mat-icon>
   </button>
