--- a/src/app/components/register-consultant/register-consultant.component.html
+++ b/src/app/components/register-consultant/register-consultant.component.html
@@ -89,10 +89,10 @@
           <mat-form-field appearance="outline" class="full-width" *ngIf="details">
             <mat-label>Confirm Password</mat-label>
             <input matInput formControlName="confirmpassword" maxlength="15"
-              type="{{ hidePassword ? 'password' : 'text' }}" />
+              type="{{ hideConPassword ? 'password' : 'text' }}" />
             <mat-icon [style.color]="'#3f51b5'" matPrefix>lock</mat-icon>
-            <button mat-icon-button type="button" matSuffix (click)="hidePassword = !hidePassword;">
-              <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+            <button mat-icon-button type="button" matSuffix (click)="hideConPassword = !hideConPassword;">
+              <mat-icon>{{ hideConPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
             </button>
             <mat-error *ngIf="form.get('confirmpassword')!.hasError('required')">Confirm Password is
               required</mat-error>
