--- a/src/app/usit/components/people/active/active.component.html
+++ b/src/app/usit/components/people/active/active.component.html
@@ -9,8 +9,8 @@
         </span>
 
         <div class="submission-actions">
-            <button [disabled]="!privilegeServ.hasPrivilege('ADD_INTERVIEWS')" matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-submission" (click)="addActive()">
-                <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_INTERVIEWS')}">add_circle</mat-icon>
+            <button  matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-submission" (click)="addActive()">
+                <mat-icon class='item-icon'>add_circle</mat-icon>
             </button>
 
             <div class="search-submission">
@@ -97,9 +97,11 @@
                     <th mat-header-cell *matHeaderCellDef> Action </th>
                     <td mat-cell *matCellDef="let interview">
                         <span class="action-buttons" >
-                            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_INTERVIEWS') " mat-icon-button (click)="editActive(interview)" class="action-button-ed">
-                                <mat-icon >edit</mat-icon></button>        <button [disabled]="!privilegeServ.hasPrivilege('DELETE_INTERVIEWS')"  mat-icon-button (click)="deleteInterview(interview)" class="action-button-ed">
-                                <mat-icon  [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('DELETE_INTERVIEWS')}" [ngClass]="'delete-icon'">delete</mat-icon>
+                            <button  mat-icon-button (click)="editActive(interview)" class="action-button-ed">
+                                <mat-icon class="edit-icon">edit</mat-icon>
+                            </button>
+                            <button mat-icon-button (click)="deleteInterview(interview)" class="action-button-ed">
+                                <mat-icon class="delete-icon">delete</mat-icon>
                             </button>
                         </span>
                     </td>
@@ -109,7 +111,7 @@
 
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="getRowStyles(row)"></tr>
+                <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
             </table>
             <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
         </section>
