--- a/src/app/usit/components/vendor-management/known-vendor-contacts/known-vendor-contacts.component.html
+++ b/src/app/usit/components/vendor-management/known-vendor-contacts/known-vendor-contacts.component.html
@@ -31,20 +31,19 @@
   
           <!-- ID Column mat-sort-header sortActionDescription="Sort by Serial Number"-->
           <ng-container matColumnDef="SerialNum">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> S.No </th>
-            <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 2%;"> S.No </th>
+            <td mat-cell *matCellDef="let element" style="width: 2%;"> {{element?.serialNum}} </td>
           </ng-container>
 
           <!-- Recruiter Name -->
           <ng-container matColumnDef="EmployeName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by EmployeName"> Recruiter
-              Name  </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by EmployeName"> Employee Name</th>
             <td mat-cell *matCellDef="let element"> {{element.employeeName | titlecase}} </td>
           </ng-container>
   
           <!-- Company Column -->
           <ng-container matColumnDef="Company">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company"> Company</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company"> Vendor </th>
             <td mat-cell *matCellDef="let element">
               <!-- <span class="vendor-name">
                 <a href="{{element?.job_source}}" target="_blank">
