--- a/src/app/usit/components/reports/open-requirements-reports/open-requirements-reports.component.scss
+++ b/src/app/usit/components/reports/open-requirements-reports/open-requirements-reports.component.scss
@@ -1,107 +1,106 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    height: 86vh;
-  }
-  
-  ul{
-    padding-inline-start: 10px;
-    background-color: rgb(228, 231, 234);
-    // height: 2rem;
-    padding-top: 2px;
-    top: 0;
-  }
-  .badge{
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  height: 86vh;
+}
+
+ul {
+  padding-inline-start: 10px;
+  background-color: rgb(228, 231, 234);
+  // height: 2rem;
+  padding-top: 2px;
+  top: 0;
+}
+.badge {
+  cursor: pointer;
 }
 
 table {
-    border-collapse: separate;
-    border-spacing: 0;
-    min-width: 350px;
-  }
-  table tr th,
-  table tr td {
-    border-right: 1px solid #bbb;
-    border-bottom: 1px solid #bbb;
-    padding: 5px;
-  }
-  table tr th:first-child,
-  table tr td:first-child {
-    border-left: 1px solid #bbb;
-  }
-  table tr th {
-    background:#d5e7e7;
-    border-top: 1px solid #bbb;
-    text-align: left;
-  }
-  
-  /* top-left border-radius */
-  table tr:first-child th:first-child {
-    border-top-left-radius: 6px;
-  }
-  
-  /* top-right border-radius */
-  table tr:first-child th:last-child {
-    border-top-right-radius: 6px;
-  }
-  
-  /* bottom-left border-radius */
-  table tr:last-child td:first-child {
-    border-bottom-left-radius: 6px;
-  }
-  
-  /* bottom-right border-radius */
-  table tr:last-child td:last-child {
-    border-bottom-right-radius: 6px;
-  }
-  .show{
-   display: none;
-  }
-  table {
-    font-size: 80%;
-    user-select: none;
-
-  }
-  table th{
-    font-weight: 500;
-
-  }
-
-  a{
-    cursor: pointer;
-  }
-  @media print {
-    table {
-      font-size: 20px;
-    }
-    form {
-      display: none;
-    }
-    .show{
-      display: block;
-     }
-     .kiran{
-      display: none;
-     }
-  }
-  .modal-xl {
-    max-width: 90% !important;
+  border-collapse: separate;
+  border-spacing: 0;
+  min-width: 350px;
+}
+table tr th,
+table tr td {
+  border-right: 1px solid #bbb;
+  border-bottom: 1px solid #bbb;
+  padding: 5px;
+}
+table tr th:first-child,
+table tr td:first-child {
+  border-left: 1px solid #bbb;
+}
+table tr th {
+  background: #d5e7e7;
+  border-top: 1px solid #bbb;
+  text-align: left;
 }
 
-.narvee{
+/* top-left border-radius */
+table tr:first-child th:first-child {
+  border-top-left-radius: 6px;
+}
+
+/* top-right border-radius */
+table tr:first-child th:last-child {
+  border-top-right-radius: 6px;
+}
+
+/* bottom-left border-radius */
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 6px;
+}
+
+/* bottom-right border-radius */
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 6px;
+}
+.show {
+  display: none;
+}
+table {
+  font-size: 80%;
+  user-select: none;
+}
+table th {
+  font-weight: 500;
+}
+
+a {
+  cursor: pointer;
+}
+@media print {
+  table {
+    font-size: 20px;
+  }
+  form {
+    display: none;
+  }
+  .show {
+    display: block;
+  }
+  .kiran {
+    display: none;
+  }
+}
+.modal-xl {
+  max-width: 90% !important;
+}
+
+.narvee {
   text-align: right;
   font-weight: bold;
 }
-.sticky{
-  position: sticky; top: 0;
+.sticky {
+  position: sticky;
+  top: 0;
 }
-.total{
-  color:red
+.total {
+  color: red;
 }
-.lesthan{
+.lesthan {
   --bs-table-bg: none;
-  color:white;
+  color: white;
   background-color: rgb(196, 136, 136) !important;
 }
 /*
@@ -109,71 +108,6 @@ form {
       display: none;
     }
     */
-  ul.breadcrumb {
-    list-style: none;
-  }
-  
-  ul.breadcrumb li {
-    display: inline;
-  }
-  
-  ul.breadcrumb li+li:before {
-    color: black;
-    content: "/\00a0";
-  }
-  
-  ul.breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  ul.breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
-  }
-
-  .mat-mdc-card {
-    position: relative;
-    top: 2rem;
-    padding-right: 3rem;
-    padding-left: 3rem;
-    width: 94%;
-    margin-left: 3rem;
-    margin-right: 3rem;
-}
-.matcards{
-    position: relative;
-    top: 4rem;
-    padding-right: 3rem;
-    padding-left: 3rem;
-    width: 94%;
-    margin-left: 3rem;
-    margin-right: 3rem;
-}
-.example-form-field {
-    margin-right: 20px;
-  }
-
-
-.mat-mdc-raised-button:not(:disabled) {
-    color: var(--mdc-protected-button-label-text-color, inherit);
-    margin-left: 3rem;
-}
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 86vh;
-}
-
-ul{
-  padding-inline-start: 10px;
-  background-color: rgb(228, 231, 234);
-  height: 2rem;
-  padding-top: 8PX;
-  top: 0;
-}
-
 ul.breadcrumb {
   list-style: none;
 }
@@ -182,7 +116,7 @@ ul.breadcrumb li {
   display: inline;
 }
 
-ul.breadcrumb li+li:before {
+ul.breadcrumb li + li:before {
   color: black;
   content: "/\00a0";
 }
@@ -198,7 +132,71 @@ ul.breadcrumb li a:hover {
   text-decoration: underline;
 }
 
-.table-wrapper{
+// .mat-mdc-card {
+//   // position: relative;
+//   // top: 2rem;
+//   // padding-right: 3rem;
+//   // padding-left: 3rem;
+//   // width: 94%;
+//   // margin-left: 3rem;
+//   // margin-right: 3rem;
+// }
+// .matcards {
+//   position: relative;
+//   top: 4rem;
+//   padding-right: 3rem;
+//   padding-left: 3rem;
+//   width: 94%;
+//   margin-left: 3rem;
+//   margin-right: 3rem;
+// }
+.example-form-field {
+  margin-right: 20px;
+}
+
+.mat-mdc-raised-button:not(:disabled) {
+  color: var(--mdc-protected-button-label-text-color, inherit);
+  margin-left: 3rem;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 86vh;
+}
+
+ul {
+  padding-inline-start: 10px;
+  background-color: rgb(228, 231, 234);
+  height: 2rem;
+  padding-top: 8px;
+  top: 0;
+}
+
+ul.breadcrumb {
+  list-style: none;
+}
+
+ul.breadcrumb li {
+  display: inline;
+}
+
+ul.breadcrumb li + li:before {
+  color: black;
+  content: "/\00a0";
+}
+
+ul.breadcrumb li a {
+  color: #0275d8;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
+
+.table-wrapper {
   flex: 1;
   // padding: 4px;
   overflow-y: auto;
@@ -207,32 +205,32 @@ ul.breadcrumb li a:hover {
 }
 table {
   width: 100%;
-
 }
-.mat-mdc-header-row  {
+.mat-mdc-header-row {
   background-color: rgb(213, 231, 231);
-  position: sticky; top: 0;
+  position: sticky;
+  top: 0;
 }
 thead {
-  position: sticky; top: 0;
+  position: sticky;
+  top: 0;
 }
-tbody{
+tbody {
   text-align: left;
 }
 .mat-sort-header-arrow {
   color: #1a1717;
 }
-.mat-mdc-row  {
+.mat-mdc-row {
   height: 48px !important;
 }
 .mat-mdc-column {
   border-right: 1px solid currentColor;
 }
-.mat-column-Designation{
+.mat-column-Designation {
   width: 32px;
   border-right: 1px solid lightgray;
   padding-right: 24px;
-
 }
 .mat-column-Name {
   border-right: 1px solid lightgray;
@@ -240,32 +238,27 @@ tbody{
 }
 
 td:nth-child(2) {
-
-  .user-info{
+  .user-info {
     cursor: pointer;
     margin-bottom: 2px;
     color: #0275d8;
   }
-  span{
+  span {
     display: flex;
     flex-direction: column;
-
   }
-
 }
 
 .mat-column-SerialNum,
 .mat-column-Name,
- .mat-column-Email,
-  .mat-column-PersonalOrCompanyNumber,
-   .mat-column-Department,
-    .mat-column-Status, .mat-column-Action{
-
+.mat-column-Email,
+.mat-column-PersonalOrCompanyNumber,
+.mat-column-Department,
+.mat-column-Status,
+.mat-column-Action {
   border-right: 1px solid lightgray;
-
-
 }
-.header-container{
+.header-container {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -281,21 +274,21 @@ td:nth-child(2) {
   margin: 4px;
   background-color: rgb(228, 231, 234);
 }
-.header-text{
- padding-left: 8px;
- font-weight: 600 ;
+.header-text {
+  padding-left: 8px;
+  font-weight: 600;
 }
-.add-user{
+.add-user {
   cursor: pointer;
 }
-.emp-actions{
+.emp-actions {
   display: flex;
   align-items: center;
-  input:focus{
+  input:focus {
     border: solid 2px #3f51b5 !important;
     outline: none;
   }
-  .search{
+  .search {
     height: 32px;
     padding: 0px 8px;
   }
@@ -310,15 +303,15 @@ td:nth-child(2) {
   display: block;
 }
 
-.action-btns{
+.action-btns {
   display: flex;
   flex-direction: row;
 }
-.mat-mdc-header-row  {
+.mat-mdc-header-row {
   z-index: 1000;
 }
 
-.no-data-found{
+.no-data-found {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -330,7 +323,6 @@ td:nth-child(2) {
   margin-top: 16px; /* Adjust margin as needed */
 }
 
-
 /* Add this CSS to your stylesheet */
 .responsive-table {
   width: 100%;
@@ -341,13 +333,15 @@ td:nth-child(2) {
   .responsive-table {
     table-layout: auto;
   }
-  .mdc-data-table__cell, .mdc-data-table__header-cell{
+  .mdc-data-table__cell,
+  .mdc-data-table__header-cell {
     padding: 0px 2px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {ve
-  .mdc-data-table__cell, .mdc-data-table__header-cell{
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  ve .mdc-data-table__cell,
+  .mdc-data-table__header-cell {
     padding: 0px 2px;
   }
 
@@ -383,7 +377,6 @@ td:nth-child(2) {
   top: 10px;
 }
 
-
 .mat-mdc-header-row {
   height: 30px !important;
 }
@@ -405,8 +398,11 @@ ul.breadcrumb li:last-child {
   }
 }
 .header-container {
-   
-    
-    z-index: 99999;
-    
-  }
+  z-index: 99999;
+}
+
+.count {
+  color: #4154f1;
+  font-weight: bold;
+  cursor: pointer;
+}
