--- a/src/app/usit/components/sales/submission-list/submission-list.component.scss
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.scss
@@ -100,6 +100,7 @@ tbody {
 .mat-column-SubRate,
 .mat-column-ProjectLocation,
 .mat-column-SubmittedBy,
+.mat-column-Status,
 .mat-column-SubStatus {
   border-right: 1px solid lightgray;
 }
