open reqs popup lis excel export changes

--- a/src/app/usit/components/reports/open-requirements-reports/open-requirement-popup-list/open-requirement-popup-list.component.html
+++ b/src/app/usit/components/reports/open-requirements-reports/open-requirement-popup-list/open-requirement-popup-list.component.html
@@ -3,6 +3,8 @@
   <span class="header-text" mat-dialog-title id="mainHeaderTitle">
     {{ data.category_skill | titlecase }}
   </span>
+  <button *ngIf="showReport" mat-raised-button style="background-color: #4CAF50; color: white;"
+  (click)="excelImport()">Excel Export</button>
   <button mat-icon-button (click)="onCancel()" class="btn-close" id="btnClose">
     <mat-icon>close</mat-icon>
   </button>
