profile edit changes

--- a/src/app/usit/components/profile/profile.component.html
+++ b/src/app/usit/components/profile/profile.component.html
@@ -1,5 +1,10 @@
 <div class="profile">
     <div class="item1">
+        <div style="display: flex; justify-content: right;">
+            <button mat-icon-button (click)="editConsultant(profiledata)">
+                <mat-icon>edit</mat-icon>
+              </button>
+        </div>
         <div>
             <img src="assets/images/file.png" alt="profile avatar" width="150px" height="150px">
         </div>
